--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
   <title>{{site.title}}</title>
   
   <style>
-    body {background: orange; }
+    body {background: red-orange; }
   </style> 
   
 </head>
