--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,10 +6,17 @@ layout: default
 
   {{ content }}
 
+
+<h2>All My Post</h2>
+
+<ul>
 {%- for post in site.posts -%}
 
-<h2>{{ post.title }}</h2>
 
-{{ content }}
+<li>
+  <a href="{{ post.url }}>{{ post.title }}</a>
+</li>
+ 
 
 {%- endfor -%}
+</ul>
