--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,7 @@ layout: default
 
 
 <li>
-  <a href="{{ post.url }}>{{ post.title }}</a>
+  <a href="{{ post.url }}">{{ post.title }}</a>
 </li>
  
 
