--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,12 +2,12 @@
 layout: default
 ---
 
-<h1>Homepage</h1>
+<h1>Angel D Lara-Suarez</h1>
 
   {{ content }}
 
 
-<h2>All My Post</h2>
+<h2 class="button">All My Post</h2>
 
 <ul>
 {%- for post in site.posts -%}
@@ -22,6 +22,6 @@ layout: default
 </ul>
 
 
-<h2>Resume</h2>
+<h2 class="button">Resume</h2>
 
 <h2> {{site.data.resume.basics.name}} </h2>
